@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2154 2012/01/27 14:49:56 mg Exp $
+# $Id: CHANGES,v 1.2155 2012/01/27 23:37:26 cg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.1.0.rc1 2012-02-??
+ - 2012-01-27 Fixed bug#8145 - TicketFreeTime entries in search profiles don't get updated.
  - 2012-01-27 Fixed bug#2820 - Wide character in Syslog message causes Perl crash on utf8 systems.
 
 3.1.0.beta5 2012-01-31
